--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,7 +27,7 @@
         </button>
     </form>
     <br/>
-    <h5>Vous n’avez pas de compte ? <a href="/register">Inscription</a></h5>
+    <h5>Vous n’avez pas de compte ? <a href="/register">Inscrivez-vous ici</a> !</h5>
 
 </div>
 {% endblock %}
