--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -76,7 +76,7 @@
                 <br>
                 <div class="row">
                     <div class="col">
-                        {{ form_widget(form.newsletter) }}&nbsp;&nbsp; Recevoir les newsletter.
+                        {{ form_widget(form.newsletter) }}&nbsp;&nbsp; J'accepte de recevoir les newsletter d'Atypik'House.
                     </div>
                 </div>
                 <br>
