--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,10 +86,10 @@
               <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
           </li>       
           <li class="nav-item">
-            <a class="nav-link" href="/register">Inscription</a>
+            <a class="btn btn-outline-register" href="/register">Inscription</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-success" href="/login">Connexion</a>
+            <a class="btn btn-outline-login" href="/login">Connexion</a>
           </li>
           </ul>
 
