--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -138,7 +138,8 @@ h3 {
 	margin-right: 0.8em;
 }
 
-#Utilisateur{
+#utilisateur,
+.nav-item .nav-link.sousMenu {
 	text-decoration:none; 
 	color: black;
 	font-weight: bold;
@@ -478,14 +479,7 @@ ul.list-unstyled li a{
 		font-weight: bold;
 		font-size: 1.2em;
 	}
-
-/*Mobile*/
-
-.sousMenu{
-	border-bottom: 1px solid #C64300;
-}
 /*Profil*/
-
 .dashboard{
 	color:black;
 }
