--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    {% block meta %}
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, user-scalable=no">
+    {% endblock %}
     <title>{% block title %}{% endblock %} &bull; Atypik'House</title>
     <link rel="icon" type="image/png" href="/img/logo.png" />
     {% block stylesheet %}
@@ -18,20 +20,14 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-    <a id="title" class="navbar-brand" href="/">
-      <img src="/img/logo.png" height="30" width="30" />
-      Atypik'House
-    </a>
-    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-      {% if 'ROLE_ADMIN' in app.user.getRoles() %}
-          | <a class="navbar" href="{{ path('logement_liste') }}">Accès BackOffice</a>    
-      {% endif %}
-    {% endif %}  
+      <a id="title" class="navbar-brand" href="/">
+        <img src="/img/logo.png" height="30" width="30" />
+        Atypik'House
+      </a>      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="mr-auto"></ul>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -54,6 +50,12 @@
                     <a class="dropdown-item" href="/profil#logements">Mes logements</a>
                   {% endif %}
                   <div class="dropdown-divider"></div>
+                  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% if 'ROLE_ADMIN' in app.user.getRoles() %}
+                      <a class="dropdown-item" href="{{ path('logement_liste') }}">Accès BackOffice</a>    
+                    {% endif %}
+                  {% endif %}
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="/logout">Déconnexion</a>
                 </div>
               </li>
@@ -62,38 +64,45 @@
       <div class="d-block d-lg-none">
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link sousMenu" href=""><div id="Utilisateur">Bienvenue {{ app.user.prenom }}</div></a>
+            <div class="nav-link sousMenu">
+              <img id="avatarLogin" src="/img/header/avatarLogin.png">
+              Bienvenue {{ app.user.prenom }}
+            </div>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="nav-item">
+            <a class="nav-link sousMenu" href="/profil#informations">Mes Informations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link sousMenu" href="/profil#voyages"><div id="Utilisateur">Mon Profil</div></a>
+            <a class="nav-link sousMenu" href="/profil#reservations">Mes Réservations</a>
           </li>
+          <div class="dropdown-divider"></div>
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% if 'ROLE_ADMIN' in app.user.getRoles() %}            
+              <li class="nav-item">
+                <a class="nav-link sousMenu" href="{{ path('logement_liste') }}">Accès BackOffice</a>
+              </li>
+            {% endif %}
+          {% endif %}
+          <div class="dropdown-divider"></div>
           <li class="nav-item">
-            <a class="nav-link sousMenu" href="/recherche"><div id="Utilisateur">Rechercher un logement</div></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link sousMenu" href="/contact"><div id="Utilisateur">Contact</div></a>
-          </li>
-          <li class="nav-item">
-            <button id="btnDeco" class="btn btn-deconnexion" onclick="location.href='/logout'">
-                <p>Deconnexion</p>
-              </button>
+            <a class="nav-link sousMenu" href="/logout">Déconnexion</a>
           </li>
         </ul>
       </div>
         {% else %}
-        <ul class="nav navbar-nav"> 
-          <li class="nav-item ajouterBien">
-              <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
-          </li>       
-          <li class="nav-item">
-            <a class="btn btn-outline-register" href="/register">Inscription</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-login" href="/login">Connexion</a>
-          </li>
+          <ul class="nav navbar-nav"> 
+            <li class="nav-item ajouterBien">
+                <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
+            </li>       
+            <li class="nav-item">
+              <a class="btn btn-outline-register" href="/register">Inscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-login" href="/login">Connexion</a>
+            </li>
           </ul>
-
-          {% endif %}
+        {% endif %}
       </div>
     </nav>
     {% block body %}{% endblock %}
