--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -174,6 +174,9 @@ h3 {
 	margin-right: 1.875em;
 }
 
+#formulaire {
+	position: relative;
+}
 
 #formulaire > img{
 	height: 35rem;
@@ -184,9 +187,8 @@ h3 {
 
 #formulaire form{
 	position:absolute;
-	right: 0; 
-	margin-right: 6.25rem;
-	margin-top: 6rem;
+	right: 6em;
+	top: 1em;
 	background-color: white;
     padding: 30px;
     border-radius: 10px;
@@ -645,12 +647,8 @@ h4.sous-titre {
 @media (max-width: 647px)
 {
     #formulaire form{
-	 right: auto;
-	 position: absolute;
-	 margin-top: 5rem;
-	 margin-bottom: 2rem;
-	 margin-left:10%;
-	 width: 80%;
+		left: 2em;
+		right: 2em;
 	}
 
 	#formulaire .form-control {
