--- a/templates/admin/parametres-type/parametres-type-edit.html.twig
+++ b/templates/admin/parametres-type/parametres-type-edit.html.twig
@@ -9,7 +9,7 @@
         </div>
     {% endfor %}
     <div class="row mx-auto my-2">
-        <a href="{{ path('parametres_type_index') }}">Retour</a>
+        <a href="{{ path('parametres_type_liste') }}">Retour</a>
     </div>
     <h1>Modifier un paramètre</h1>
     <div class="row">
