--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -29,7 +29,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('reservation_liste') }}">Réservations</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Commentaires (TODO)</a>
+                                <a class="dropdown-item" href="{{ path('logement_commentaires') }}">Commentaires</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
