--- a/templates/admin/parametres-type/parametres-type-liste.html.twig
+++ b/templates/admin/parametres-type/parametres-type-liste.html.twig
@@ -35,9 +35,13 @@
                 {% for p in params %}
                     <tr>
                         <td>{{ p.nom }}</td>
-                        <td>
-                            <a href="{{ path('parametres_type_edit', {'id': p.id}) }}" class="btn btn-success">M</a>
-                            <a href="{{ path('parametres_type_delete', {'id': p.id}) }}" class="btn btn-danger">S</a>
+                        <td colspan>
+                            <a href="{{ path('parametres_type_edit', {'id': p.id}) }}" class="btn btn-info" title="Modifier le paramètre">
+                                <img src="/img/picto/pencil.svg" />
+                            </a>
+                            <a href="{{ path('parametres_type_delete', {'id': p.id}) }}" class="btn btn-danger" title="Supprimer le paramètre">
+                                <img src="/img/picto/uncheck.svg" />
+                            </a>
                         </td>
                     </tr>
                 {% else %}
