--- a/templates/admin/reservation/reservation-edit.html.twig
+++ b/templates/admin/reservation/reservation-edit.html.twig
@@ -3,17 +3,24 @@
 {% block title %}Modification d'une réservation{% endblock %}
 
 {% block body %}
-    <div class="container">    
     <div class="row mx-auto my-2">
         <a href="{{ path('reservation_liste') }}">Retour</a>
     </div>
-
-    </div>
-    <h1>Edit Reservation</h1>
-
-    {{ include('reservation/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('reservation_index') }}">back to list</a>
-
-    {{ include('reservation/_delete_form.html.twig') }}
+    <h1>Modification d'une réservation</h1>
+    {% for flash_message in app.session.flashBag.get('success') %}
+        <div class="alert alert-success">
+            {{ flash_message }}
+        </div>
+    {% endfor %}
+    {% for flash_message in app.session.flashBag.get('error') %}
+        <div class="alert alert-error">
+            {{ flash_message }}
+        </div>
+    {% endfor %}   
+    <br>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <br>
+        <button class="btn btn-success">Mettre à jour</button>
+    {{ form_end(form) }}
 {% endblock %}
